--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,24 @@
   <version>1.0-SNAPSHOT</version>
   <name>JBossWS Sign and Encrypt Example</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <version.eap6>6.2.4.GA</version.eap6>
+  </properties>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.jboss.bom</groupId>
+        <artifactId>eap6-supported-artifacts</artifactId>
+        <version>${version.eap6}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>org.jboss.ws.cxf</groupId>
       <artifactId>jbossws-cxf-client</artifactId>
-      <version>4.2.4.Final</version>
       <exclusions>
         <exclusion>
           <groupId>log4j</groupId>
@@ -22,19 +35,16 @@
     <dependency>
       <groupId>org.jboss.logmanager</groupId>
       <artifactId>jboss-logmanager</artifactId>
-      <version>1.5.2.Final</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.logmanager</groupId>
       <artifactId>log4j-jboss-logmanager</artifactId>
-      <version>1.1.0.Final</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging</artifactId>
-      <version>3.1.2.GA</version>
     </dependency>
   </dependencies>
   <build>
